--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Title: Sandbox R code into another R Session
 Version: 0.1.0
 Author: Ellis Hughes [aut,cre]
 Maintainer: Ellis Hughes <ellishughes@live.com>
-Description:Run your R code in another "sandbox" R environment and capture the outputs. You can also 'leak' objects that were generated in your sandbox environment to the current environment
-License: MIT
+Description:
+  Run your R code in another "sandbox" R environment and capture the outputs. You can also 'leak' objects that were generated in your sandbox environment to the current environment. Currently the sandbox environment is limited to your local machine, but the idea is to add the ability to send it to a cluster.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
