--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat
+    testthat,ggplot2,MASS
 Depends: 
     evaluate,stringi
