updates to travis.yml to try to include coverage testing
added travis ci badge

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,9 @@ jobs:
   - stage: full
     os: osx
   - r: release
-    after_success:
-    - Rscript -e 'covr::codecov()'
+    
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
