--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: sandbox
 Type: Package
 Title: Execute R Code in a Separate R Session
 Version: 0.1.0
-Author: Ellis Hughes [aut,cre]
-Maintainer: Ellis Hughes <ellishughes@live.com>
+Authors@R: c(
+    person("Ellis", "Hughes", , "ellishughes@live.com", c("aut", "cre")))
 Description:
   Run your R code in another "sandbox" R environment and capture the outputs. You can also 'leak' objects that were generated in your sandbox environment to the current environment. Currently the sandbox environment is limited to your local machine, but the idea is to add the ability to send it to a cluster.
 License: MIT + file LICENSE
@@ -11,6 +11,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat,ggplot2,MASS
+    testthat,
+    ggplot2,
+    MASS
 Depends: 
-    evaluate,stringi
+    evaluate,
+    stringi
