wholesale changes to allow for the future of non-localhost connections, and associated tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,sandbox_output)
 export(leak)
 export(sandbox)
+export(sandboxConnectionTemplate)
 import(evaluate)
 import(stringi)
 importFrom(utils,sessionInfo)
