--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(leak)
 export(sandbox)
 export(sandboxConnectionTemplate)
 import(evaluate)
+import(ssh)
 import(stringi)
 importFrom(utils,sessionInfo)
