Added install of libssh-dev to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ latex: false
 fortran: false
 r_build_args: '--no-manual'
 
+before_install:
+  - sudo apt-get install -y libssh-dev
+
 jobs:
   include:
   - r: devel
