will this work?

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,20 @@ latex: false
 fortran: false
 r_build_args: '--no-manual'
 
-jobs:
+matrix:
   include:
-  - r: devel
-  - r: 3.1
-  - r: 3.4
-    warnings_are_errors: false
+    - r: devel
+    - os: linux
+    - r: devel
+    - r: 3.1
+    - r: 3.4
+      warnings_are_errors: false
 
-  - stage: full
-    os: osx
-    brew_packages: libssh
-      before_install: brew upgrade libssh # temp fix for outdated travis
-  - r: release
+    - stage: full
+      os: osx
+      brew_packages: libssh
+        before_install: brew upgrade libssh # temp fix for outdated travis
+    - r: release
  
 addons:
   apt:
