--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ r_build_args: '--no-manual'
 matrix:
   include:
     - r: devel
-    os: linux
+    - os: linux
     - r: devel
     - r: 3.1
     - r: 3.4
     - r: release
-    os: osx
+    - os: osx
 
 addons:
   apt:
