--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,6 @@ export(sandbox)
 export(sandboxConnectionTemplate)
 import(ssh)
 importFrom(evaluate,evaluate)
+importFrom(jsonlite,base64_dec)
+importFrom(jsonlite,base64_enc)
 importFrom(utils,sessionInfo)
